2002-10-02  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/xmlrpchandler.py (XMLRPCServer._multicall): added
	system.multicall ("boxcarring") support; reworked the dispatching
	mechanism; now use standard fault codes; added workaround for
	pydoc bugs in pydoc.TextDoc.docroutine in dealing with lambdas
	(when and if pydoc is fixed, this code will stop working correctly).

2002-09-30  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/SkunkWeb/constants.py (SERVER_PORT),
	SkunkWeb/Services/web/protocol.py (_processRequest),
	SkunkWeb/SkunkWeb/ConfigAdditives.py (ServerPort): support for
	scoping based on the SERVER_PORT environmental variable.

2002-09-30    <smulloni@smullbola.smullyan.org>

	* pylibs/PyDO/postconn.py (_dateConvertFromDB): module was broken,
	at least with postgresql 7.2.2, when the timestamp returned contained
	milliseconds but no timezone.
	
2002-09-29    <smulloni@smullbola.smullyan.org>

	* pylibs/xmlrpchandler.py: helper module for writing XMLRPC servers. 

2002-09-04  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/flowmgr/parser.py: parser for flow manager, partially
	verified.  
	(pyeval): made it a function, not a lambda.

2002-08-30  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/flowmgr/flowdef.dtd: DTD for flow definitions.

	* pylibs/xmlutils.py (XMLElement.__init__): made attributes
	dictionary directly available and non-private.

2002-08-29  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/xmlutils.py (makeElement): modified parser so it could
	produce different element classes depending on element name and
	elementClassRegistry. (XMLElement.getChildrenByAttribute): moved
	this here from ecs.xhtml; also added method aliases getElement,
	getElements, getElementsByAttribute.

	* pylibs/ecs/xhtml.py (parse): added parse method that returns
	a tree of Elements given an xhtml string.

2002-08-28  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/xmlutils.py (XMLElement.__str__): now adds spaces in